# monitoring-kubernetes

./: .gitignore  .prompt.md  AGENTS.md  CHANGELOG.md  GEMINI.md  README.md  kubernetes_monitoring.py  kubernetes_monitoring2.py  pyproject.toml  test.py
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  release.yml
tests/: test_graceful_shutdown.py  test_kubernetes_monitoring.py
