[project]
name = "monitoring-kubernetes"
version = "1.1.0"
description = "monitoring kubernetes with python"
authors = [
    { name = "KKamJi", email = "xowl5460@naver.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "kubernetes>=32.0.1",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"