[project]
name = "monitoring-kubernetes"
version = "1.2.0"
description = "monitoring kubernetes with python"
authors = [
    { name = "KKamJi", email = "xowl5460@naver.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "kubernetes>=32.0.1",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Error, Flake8, Warnings, isort
ignore = ["E501"] # Line too long, handled by black

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ['build/']